--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+git:
+  depth: 3
 language: java
 jdk:
-  - openjdk8
-
-script: ./mvnw clean install
+  - oraclejdk8
+before_install:
+  - chmod +x mvnw
