--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,6 @@
-language: node_js
-services: docker
-
-script:
-  - docker version
-  - docker images
-  - npm install -g rebase-docker-image
-  - rebase-docker-image -h
 git:
-  depth: 1
+  depth: false
+  
 language: java
 jdk:
   - openjdk8
